objects/jiffle__Event_Master__c.object
<CustomObject>
    <fields>
        <fullName>jiffle__Activity_Master_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Master Event</label>
        <referenceTo>jiffle__Event__c</referenceTo>
        <relationshipLabel>Activity Master</relationshipLabel>
        <relationshipName>Event_ActivityMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Master_UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Region_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Event</label>
        <referenceTo>jiffle__Event__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Event_Region</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Topic_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic Event</label>
        <referenceTo>jiffle__Event__c</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Event_Topic</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Master</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>jiffle__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Master</pluralLabel>
    <recordTypes>
        <fullName>jiffle__Activity_Master</fullName>
        <active>true</active>
        <description>Record Type used for storing Activity Type (Dinner, Meetings, etc,.) for an Event</description>
        <label>Activity Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>jiffle__Region</fullName>
        <active>true</active>
        <description>Record Type used for storing Regions for an Event</description>
        <label>Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>jiffle__Topic</fullName>
        <active>true</active>
        <description>Record Type used for storing Topics for an Event</description>
        <label>Topic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>